Added check for RGB length

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>RGB to Hex converter</h1>
-        <p>Please enter RGB value, by using comma:</p>
+        <p>Please enter RGB values separated by comma:</p>
         <input type="text" id="rgbValue" placeholder="255,255,255">
         <h2></h2>
         <div></div>
