--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>RGB to Hex converter</title>
+        <title>RGB to hex converter</title>
     </head>
     <body>
-        <h1>RGB to Hex converter</h1>
+        <h1>RGB to hex converter</h1>
         <p>Please enter RGB values separated by comma:</p>
         <input type="text" id="rgbValue" placeholder="255,255,255">
         <h2></h2>
